# cutter

./: .gitignore  Cargo.toml  NOTICE  README.md  build.rs
scripts/: Info.plist  build-app.sh
src/: ai_link.rs  cli.rs  config.rs  error.rs  git.rs  gui.rs  lib.rs  main.rs  pr.rs  session.rs  window_manager.rs  workspace.rs
src/commands/: ai.rs  base.rs  claude.rs  create.rs  list.rs  mod.rs  open.rs  remove.rs  session.rs  status.rs
