[package]
name = "cutter"
version = "0.1.0"
edition = "2021"
description = "Git worktree workspace manager"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
thiserror = "2"
colored = "3"
tabled = "0.17"
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.11"
serde_json = "1"
