[package]
name = "cutter"
version = "0.1.0"
edition = "2021"
description = "Git worktree workspace manager"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
thiserror = "2"
colored = "3"
tabled = "0.17"
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.11"
serde_json = "1"
libc = "0.2"
eframe = { version = "0.34", optional = true }
notify-debouncer-mini = { version = "0.7.0", optional = true }
rfd = { version = "0.15", optional = true }

# Embedded terminal widget for the GUI: an egui widget backed by
# alacritty_terminal for VT emulation + PTY. Pulled from git because the
# published 0.1.0 targets an older egui; master tracks egui 0.34 to match eframe.
egui_term = { git = "https://github.com/Harzu/egui_term", optional = true }

# Window linking (GUI, macOS only): enumerate and raise other apps' windows via
# the Accessibility API, ordered front-to-back via the CoreGraphics window list.
# These are macOS-only crates; the GUI itself is a macOS app, so the `gui`
# feature is only ever built on macOS. The code that uses them is additionally
# gated on `target_os = "macos"` with a stub fallback.
accessibility-sys = { version = "0.1", optional = true }
core-foundation = { version = "0.10", optional = true }
core-foundation-sys = { version = "0.8", optional = true }
core-graphics = { version = "0.24", optional = true }
egui-phosphor = { version = "0.12", optional = true }

[features]
# Builds the standalone Cutter.app GUI (the `cutter-gui` binary).
gui = [
    "dep:eframe",
    "dep:notify-debouncer-mini",
    "dep:rfd",
    "dep:egui_term",
    "dep:egui-phosphor",
    "dep:accessibility-sys",
    "dep:core-foundation",
    "dep:core-foundation-sys",
    "dep:core-graphics",
]

# The default CLI binary stays lean; the GUI is opt-in behind `--features gui`.
[[bin]]
name = "cutter-gui"
path = "src/bin/cutter-gui.rs"
required-features = ["gui"]
